@@ -25,7 +25,6 @@ import static org.openqa.selenium.remote.http.Route.get;
 import static org.openqa.selenium.remote.http.Route.matching;
 import static org.openqa.selenium.remote.http.Route.post;
 
-import com.google.common.collect.ImmutableMap;
 import java.io.IOException;
 import java.net.URI;
 import java.time.Duration;
@@ -36,6 +35,7 @@ import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.logging.Logger;
 import java.util.stream.Collectors;
 import java.util.stream.StreamSupport;
+import org.jspecify.annotations.Nullable;
 import org.openqa.selenium.BuildInfo;
 import org.openqa.selenium.Capabilities;
 import org.openqa.selenium.NoSuchSessionException;
@@ -125,7 +125,7 @@ public abstract class Node implements HasReadyState, Routable {
 
   private static final Logger LOG = Logger.getLogger(Node.class.getName());
   private static final BuildInfo INFO = new BuildInfo();
-  private static final ImmutableMap<String, String> OS_INFO = loadOsInfo();
+  private static final Map<String, String> OS_INFO = loadOsInfo();
   protected final Tracer tracer;
   private final NodeId id;
   private final URI uri;
@@ -171,12 +171,18 @@ public abstract class Node implements HasReadyState, Routable {
             get("/session/{sessionId}/se/files")
                 .to(params -> new DownloadFile(this, sessionIdFrom(params)))
                 .with(spanDecorator("node.download_file")),
+            get("/session/{sessionId}/se/files/{fileName}")
+                .to(params -> new DownloadFile(this, sessionIdFrom(params)))
+                .with(spanDecorator("node.download_file")),
             post("/session/{sessionId}/se/files")
                 .to(params -> new DownloadFile(this, sessionIdFrom(params)))
                 .with(spanDecorator("node.download_file")),
             delete("/session/{sessionId}/se/files")
                 .to(params -> new DownloadFile(this, sessionIdFrom(params)))
                 .with(spanDecorator("node.download_file")),
+            post("/session/{sessionId}/se/event")
+                .to(params -> new FireSessionEvent(this, sessionIdFrom(params)))
+                .with(spanDecorator("node.fire_session_event")),
             get("/se/grid/node/owner/{sessionId}")
                 .to(params -> new IsSessionOwner(this, sessionIdFrom(params)))
                 .with(spanDecorator("node.is_session_owner").andThen(requiresSecret)),
@@ -204,8 +210,8 @@ public abstract class Node implements HasReadyState, Routable {
             get("/status").to(() -> new StatusHandler(this)).with(spanDecorator("node.status")));
   }
 
-  private static ImmutableMap<String, String> loadOsInfo() {
-    return ImmutableMap.of(
+  private static Map<String, String> loadOsInfo() {
+    return Map.of(
         "arch", System.getProperty("os.arch"),
         "name", System.getProperty("os.name"),
         "version", System.getProperty("os.version"));
@@ -231,7 +237,7 @@ public abstract class Node implements HasReadyState, Routable {
     return String.format("%s (revision %s)", INFO.getReleaseLabel(), INFO.getBuildRevision());
   }
 
-  public ImmutableMap<String, String> getOsInfo() {
+  public Map<String, String> getOsInfo() {
     return OS_INFO;
   }
 
@@ -250,9 +256,26 @@ public abstract class Node implements HasReadyState, Routable {
     throw new UnsupportedOperationException();
   }
 
+  @Nullable
   public abstract HttpResponse uploadFile(HttpRequest req, SessionId id);
 
+  @Nullable
   public abstract HttpResponse downloadFile(HttpRequest req, SessionId id);
+
+  /**
+   * Fires a custom session event to the remote server event bus. This allows test code to trigger
+   * server-side utilities that subscribe to the event bus.
+   *
+   * <p>Default implementation throws {@link UnsupportedOperationException}. Subclasses that support
+   * session events should override this method.
+   *
+   * @param req the HTTP request containing the event data
+   * @param id the session ID
+   * @return the HTTP response
+   */
+  public HttpResponse fireSessionEvent(HttpRequest req, SessionId id) {
+    throw new UnsupportedOperationException();
+  }
 
   public abstract void stop(SessionId id) throws NoSuchSessionException;
 
