@@ -20,7 +20,6 @@ package org.openqa.selenium;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatExceptionOfType;
 
-import com.google.common.collect.ImmutableMap;
 import java.util.HashMap;
 import java.util.Map;
 import org.junit.jupiter.api.Tag;
@@ -38,26 +37,27 @@ class CapabilitiesTest {
   @Test
   void canCreateSinglePairCapabilities() {
     Capabilities caps = new ImmutableCapabilities("c1", "v1");
-    assertThat(caps.asMap()).isEqualTo(ImmutableMap.of("c1", "v1"));
+    assertThat(caps.asMap()).containsExactlyInAnyOrderEntriesOf(Map.of("c1", "v1"));
   }
 
   @Test
   void canCreateTwoPairCapabilities() {
     Capabilities caps = new ImmutableCapabilities("c1", "v1", "c2", 2);
-    assertThat(caps.asMap()).isEqualTo(ImmutableMap.of("c1", "v1", "c2", 2));
+    assertThat(caps.asMap()).containsExactlyInAnyOrderEntriesOf(Map.of("c1", "v1", "c2", 2));
   }
 
   @Test
   void canCreateThreePairCapabilities() {
     Capabilities caps = new ImmutableCapabilities("c1", "v1", "c2", 2, "c3", true);
-    assertThat(caps.asMap()).isEqualTo(ImmutableMap.of("c1", "v1", "c2", 2, "c3", true));
+    assertThat(caps.asMap())
+        .containsExactlyInAnyOrderEntriesOf(Map.of("c1", "v1", "c2", 2, "c3", true));
   }
 
   @Test
   void canCreateFourPairCapabilities() {
     Capabilities caps = new ImmutableCapabilities("c1", "v1", "c2", 2, "c3", true, "c4", "v4");
     assertThat(caps.asMap())
-        .isEqualTo(ImmutableMap.of("c1", "v1", "c2", 2, "c3", true, "c4", "v4"));
+        .containsExactlyInAnyOrderEntriesOf(Map.of("c1", "v1", "c2", 2, "c3", true, "c4", "v4"));
   }
 
   @Test
@@ -65,7 +65,8 @@ class CapabilitiesTest {
     Capabilities caps =
         new ImmutableCapabilities("c1", "v1", "c2", 2, "c3", true, "c4", "v4", "c5", "v5");
     assertThat(caps.asMap())
-        .isEqualTo(ImmutableMap.of("c1", "v1", "c2", 2, "c3", true, "c4", "v4", "c5", "v5"));
+        .containsExactlyInAnyOrderEntriesOf(
+            Map.of("c1", "v1", "c2", 2, "c3", true, "c4", "v4", "c5", "v5"));
   }
 
   @Test
@@ -91,43 +92,43 @@ class CapabilitiesTest {
 
   @Test
   void canMergeImmutableCapabilities() {
-    Map<String, Object> map1 = ImmutableMap.of("c1", "v1", "c2", "v2");
-    Map<String, Object> map2 = ImmutableMap.of("c1", "new value", "c3", "v3");
+    Map<String, Object> map1 = Map.of("c1", "v1", "c2", "v2");
+    Map<String, Object> map2 = Map.of("c1", "new value", "c3", "v3");
     Capabilities caps1 = new ImmutableCapabilities(map1);
     Capabilities caps2 = new ImmutableCapabilities(map2);
     Capabilities merged = caps1.merge(caps2);
     assertThat(merged).isNotSameAs(caps1).isNotSameAs(caps2);
     assertThat(merged.asMap())
-        .containsExactlyEntriesOf(ImmutableMap.of("c1", "new value", "c2", "v2", "c3", "v3"));
-    assertThat(caps1.asMap()).containsExactlyEntriesOf(map1);
-    assertThat(caps2.asMap()).containsExactlyEntriesOf(map2);
+        .containsExactlyInAnyOrderEntriesOf(Map.of("c1", "new value", "c2", "v2", "c3", "v3"));
+    assertThat(caps1.asMap()).containsExactlyInAnyOrderEntriesOf(map1);
+    assertThat(caps2.asMap()).containsExactlyInAnyOrderEntriesOf(map2);
   }
 
   @Test
   void canMergeMutableCapabilities() {
-    Map<String, Object> map1 = ImmutableMap.of("c1", "v1", "c2", "v2");
-    Map<String, Object> map2 = ImmutableMap.of("c1", "new value", "c3", "v3");
+    Map<String, Object> map1 = Map.of("c1", "v1", "c2", "v2");
+    Map<String, Object> map2 = Map.of("c1", "new value", "c3", "v3");
     Capabilities caps1 = new MutableCapabilities(map1);
     Capabilities caps2 = new MutableCapabilities(map2);
     Capabilities merged = caps1.merge(caps2);
     assertThat(merged).isNotSameAs(caps1).isNotSameAs(caps2);
     assertThat(merged.asMap())
-        .containsExactlyEntriesOf(ImmutableMap.of("c1", "new value", "c2", "v2", "c3", "v3"));
-    assertThat(caps1.asMap()).containsExactlyEntriesOf(map1);
-    assertThat(caps2.asMap()).containsExactlyEntriesOf(map2);
+        .containsExactlyInAnyOrderEntriesOf(Map.of("c1", "new value", "c2", "v2", "c3", "v3"));
+    assertThat(caps1.asMap()).containsExactlyInAnyOrderEntriesOf(map1);
+    assertThat(caps2.asMap()).containsExactlyInAnyOrderEntriesOf(map2);
   }
 
   @Test
   void ensureHashCodesAreEqual() {
     Capabilities one = new ImmutableCapabilities("key1", "value1", "key2", "value2");
-    Capabilities two = new MutableCapabilities(ImmutableMap.of("key1", "value1", "key2", "value2"));
+    Capabilities two = new MutableCapabilities(Map.of("key1", "value1", "key2", "value2"));
     Capabilities three =
         new PersistentCapabilities(new ImmutableCapabilities("key2", "value2"))
             .setCapability("key1", "value1");
 
-    assertThat(one.hashCode()).isEqualTo(two.hashCode());
-    assertThat(one.hashCode()).isEqualTo(three.hashCode());
-    assertThat(two.hashCode()).isEqualTo(three.hashCode());
+    assertThat(one).hasSameHashCodeAs(two);
+    assertThat(one).hasSameHashCodeAs(three);
+    assertThat(two).hasSameHashCodeAs(three);
   }
 
   @Test
