@@ -25,7 +25,6 @@ import java.io.StringReader;
 import java.io.UncheckedIOException;
 import java.net.ConnectException;
 import java.time.Duration;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 import org.openqa.selenium.Capabilities;
@@ -67,6 +66,9 @@ public enum DeploymentTypes {
           new String[] {
             "[network]",
             "relax-checks = true",
+            "",
+            "[node]",
+            "enable-managed-downloads = true",
             "",
             "[server]",
             "registration-secret = \"provolone\"",
@@ -187,12 +189,10 @@ public enum DeploymentTypes {
                               new StringReader(
                                   String.join(
                                       "\n",
-                                      new String[] {
-                                        "[events]",
-                                        "publish = \"tcp://localhost:" + publish + "\"",
-                                        "subscribe = \"tcp://localhost:" + subscribe + "\"",
-                                        "bind = true"
-                                      }))),
+                                      "[events]",
+                                      "publish = \"tcp://localhost:" + publish + "\"",
+                                      "subscribe = \"tcp://localhost:" + subscribe + "\"",
+                                      "bind = true"))),
                           setRandomPort(),
                           sharedConfig)))
               .start();
@@ -208,11 +208,9 @@ public enum DeploymentTypes {
               new StringReader(
                   String.join(
                       "\n",
-                      new String[] {
-                        "[sessionqueue]",
-                        "hostname = \"localhost\"",
-                        "port = " + newSessionQueueServer.getUrl().getPort()
-                      })));
+                      "[sessionqueue]",
+                      "hostname = \"localhost\"",
+                      "port = " + newSessionQueueServer.getUrl().getPort())));
 
       Server<?> sessionMapServer =
           new SessionMapServer()
@@ -223,11 +221,9 @@ public enum DeploymentTypes {
               new StringReader(
                   String.join(
                       "\n",
-                      new String[] {
-                        "[sessions]",
-                        "hostname = \"localhost\"",
-                        "port = " + sessionMapServer.getUrl().getPort()
-                      })));
+                      "[sessions]",
+                      "hostname = \"localhost\"",
+                      "port = " + sessionMapServer.getUrl().getPort())));
 
       Server<?> distributorServer =
           new DistributorServer()
@@ -244,11 +240,9 @@ public enum DeploymentTypes {
               new StringReader(
                   String.join(
                       "\n",
-                      new String[] {
-                        "[distributor]",
-                        "hostname = \"localhost\"",
-                        "port = " + distributorServer.getUrl().getPort()
-                      })));
+                      "[distributor]",
+                      "hostname = \"localhost\"",
+                      "port = " + distributorServer.getUrl().getPort())));
 
       Server<?> router =
           new RouterServer()
@@ -309,8 +303,7 @@ public enum DeploymentTypes {
               c -> {
                 HttpResponse response = c.execute(new HttpRequest(GET, "/status"));
                 Map<String, Object> status = Values.get(response, MAP_TYPE);
-                return Boolean.TRUE.equals(
-                    status != null && Boolean.parseBoolean(status.get("ready").toString()));
+                return status != null && Boolean.parseBoolean(status.get("ready").toString());
               });
     } finally {
       Safely.safelyCall(client::close);
@@ -325,7 +318,7 @@ public enum DeploymentTypes {
 
     private Deployment(Server<?> server, TearDownFixture... tearDowns) {
       this.server = server;
-      this.tearDowns = Arrays.asList(tearDowns);
+      this.tearDowns = List.of(tearDowns);
     }
 
     public Server<?> getServer() {
