@@ -22,19 +22,20 @@ import static org.assertj.core.api.Assertions.assertThatExceptionOfType;
 import static org.mockito.Mockito.mock;
 import static org.openqa.selenium.remote.DriverCommand.FIND_ELEMENT;
 
-import com.google.common.collect.ImmutableMap;
 import java.lang.reflect.Method;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import org.jspecify.annotations.NullMarked;
 import org.junit.jupiter.api.Tag;
 import org.junit.jupiter.api.Test;
 import org.openqa.selenium.By;
 import org.openqa.selenium.Capabilities;
 import org.openqa.selenium.HasCapabilities;
 import org.openqa.selenium.ImmutableCapabilities;
+import org.openqa.selenium.MutableCapabilities;
 import org.openqa.selenium.NoSuchElementException;
 import org.openqa.selenium.SearchContext;
 import org.openqa.selenium.WebDriver;
@@ -47,6 +48,7 @@ import org.openqa.selenium.support.events.EventFiringDecorator;
 import org.openqa.selenium.support.events.WebDriverListener;
 
 @Tag("UnitTests")
+@NullMarked
 class AugmenterTest {
 
   private Augmenter getAugmenter() {
@@ -86,12 +88,13 @@ class AugmenterTest {
     Capabilities caps = new ImmutableCapabilities("foo", true);
     WebDriver driver = new RemoteWebDriver(new StubExecutor(caps), caps);
 
-    WebDriver returned =
-        getAugmenter()
-            .addDriverAugmentation("foo", MyInterface.class, (c, exe) -> () -> "Hello World")
-            .augment(driver);
+    var returned =
+        (WebDriver & MyInterface)
+            getAugmenter()
+                .addDriverAugmentation("foo", MyInterface.class, (c, exe) -> () -> "Hello World")
+                .augment(driver);
 
-    String text = ((MyInterface) returned).getHelloWorld();
+    String text = returned.getHelloWorld();
     assertThat(text).isEqualTo("Hello World");
   }
 
@@ -115,8 +118,7 @@ class AugmenterTest {
     // This will force the class to be enhanced
     final Capabilities caps = new ImmutableCapabilities("magic.numbers", true);
 
-    DetonatingDriver driver = new DetonatingDriver();
-    driver.setCapabilities(caps);
+    DetonatingDriver driver = new DetonatingDriver(caps);
 
     WebDriver returned =
         getAugmenter()
@@ -146,7 +148,7 @@ class AugmenterTest {
     Capabilities caps = new ImmutableCapabilities("find by magic", true);
     StubExecutor executor = new StubExecutor(caps);
     final WebElement element = mock(WebElement.class);
-    executor.expect(FIND_ELEMENT, ImmutableMap.of("using", "magic", "value", "cheese"), element);
+    executor.expect(FIND_ELEMENT, Map.of("using", "magic", "value", "cheese"), element);
 
     WebDriver driver = new RemoteWebDriver(executor, caps);
     WebDriver returned =
@@ -168,26 +170,27 @@ class AugmenterTest {
             "numbers", true);
     WebDriver driver = new RemoteWebDriver(new StubExecutor(caps), caps);
 
-    WebDriver returned =
-        getAugmenter()
-            .addDriverAugmentation("magic.numbers", HasMagicNumbers.class, (c, exe) -> () -> 42)
-            .addDriverAugmentation(
-                "numbers",
-                HasNumbers.class,
-                (c, exe) ->
-                    webDriver -> {
-                      Require.precondition(
-                          webDriver instanceof HasMagicNumbers,
-                          "Driver must implement HasMagicNumbers");
-                      return ((HasMagicNumbers) webDriver).getMagicNumber();
-                    })
-            .augment(driver);
+    var returned =
+        (WebDriver & HasNumbers)
+            getAugmenter()
+                .addDriverAugmentation("magic.numbers", HasMagicNumbers.class, (c, exe) -> () -> 42)
+                .addDriverAugmentation(
+                    "numbers",
+                    HasNumbers.class,
+                    (c, exe) ->
+                        webDriver -> {
+                          Require.precondition(
+                              webDriver instanceof HasMagicNumbers,
+                              "Driver must implement HasMagicNumbers");
+                          return ((HasMagicNumbers) webDriver).getMagicNumber();
+                        })
+                .augment(driver);
 
     assertThat(returned).isNotSameAs(driver);
     assertThat(returned).isInstanceOf(HasMagicNumbers.class);
     assertThat(returned).isInstanceOf(HasNumbers.class);
 
-    int number = ((HasNumbers) returned).getNumbers(returned);
+    int number = returned.getNumbers(returned);
     assertThat(number).isEqualTo(42);
   }
 
@@ -214,7 +217,8 @@ class AugmenterTest {
                     })
             .augment(driver);
 
-    WebDriver decorated = new ModifyTitleWebDriverDecorator().decorate(augmented);
+    var decorated =
+        (WebDriver & HasNumbers) new ModifyTitleWebDriverDecorator().decorate(augmented);
 
     assertThat(decorated).isNotSameAs(driver);
 
@@ -225,7 +229,7 @@ class AugmenterTest {
 
     assertThat(title).isEqualTo("title");
 
-    int number = ((HasNumbers) decorated).getNumbers(decorated);
+    int number = decorated.getNumbers(decorated);
     assertThat(number).isEqualTo(42);
   }
 
@@ -282,6 +286,7 @@ class AugmenterTest {
     WebElement findByMagic(String magicWord);
   }
 
+  @NullMarked
   protected static class StubExecutor implements CommandExecutor {
 
     private final Capabilities capabilities;
@@ -337,18 +342,18 @@ class AugmenterTest {
   }
 
   public static class DetonatingDriver extends RemoteWebDriver {
+    protected DetonatingDriver() {
+      this(new MutableCapabilities());
+    }
 
-    private Capabilities caps;
-
-    public void setCapabilities(Capabilities caps) {
-      this.caps = caps;
+    public DetonatingDriver(Capabilities caps) {
+      super(caps);
     }
 
     @Override
-    public Capabilities getCapabilities() {
-      return caps;
-    }
+    protected void startSession(Capabilities capabilities) {}
 
+    @NullMarked
     @Override
     public WebElement findElement(By locator) {
       if (locator instanceof By.Remotable) {
@@ -356,7 +361,7 @@ class AugmenterTest {
           throw new NoSuchElementException("Boom");
         }
       }
-      return null;
+      throw new NoSuchElementException("Element not found by " + locator);
     }
   }
 
@@ -386,6 +391,7 @@ class AugmenterTest {
     }
   }
 
+  @NullMarked
   private static class ModifyTitleWebDriverDecorator extends WebDriverDecorator<WebDriver> {
 
     @Override
